added updateInterval variable; check previous data time and update

--- a/MMM-airKorea.css
+++ b/MMM-airKorea.css
@@ -4,6 +4,8 @@
 #airKoreaContainer {
 	font-family: 'Noto Sans KR', sans-serif;
 	font-weight: 300;
+	font-size: 10px;
+	color: white;
 }
 
 #dataInfo {
